# solar-payoff

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  collect.py  dashboard.py  db.py  fetch_data.py  main.py  octopus.py  pyproject.toml  solar.db  solis.py  test_solar.py
.github/workflows/: deploy.yml  test.yml
